--- a/red.css
+++ b/red.css
@@ -42,21 +42,35 @@ a{
     text-align: left;
 }
 
-.poem{
-    margin-top: 20rem;
-} 
+#instructions{
+    margin-top: 0px;
+}
+
 
 #sectionred{
     margin-top: 6.5rem;
 }
 
+
+#sectionorange{
+    margin-top: 22rem;
+}
+
+#sectionyellow{
+    margin-top: 22rem;
+}
+
+#sectiongreen{
+    margin-top: 22rem;
+}
+
+#sectionblue{
+    margin-top: 22rem;
+}
+
 #sectionpurple{
     margin-top: 22rem;
     margin-bottom: 22rem;
-}
-
-.whiteout{
-    color: white;
 }
 
 .back{
@@ -71,7 +85,7 @@ a{
 }
 
 
-#table{
+.table{
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
     text-align: center;
@@ -100,20 +114,6 @@ td:after{
 
 
 
-.arrow-wrapper {
-    display: inline-block;
-    width: 100%;
-    text-align: right;
-    margin-top: 0; /* Reset any margin at the top */
-}
-
-.arrow-wrapper {
-    display: inline-block;
-    width: 100%;
-    text-align: right;
-    margin-top: 0; /* Reset any margin at the top */
-}
-
 .arrow {
     font-family: 'Times New Roman', Times, serif;
     font-size: 1px; /* Adjust size as needed */
@@ -122,6 +122,7 @@ td:after{
     transform-origin: center; /* Ensure rotation is centered */
     white-space: nowrap; /* Prevents the arrow from breaking into multiple lines */
     letter-spacing: normal; /* Resets any unwanted letter spacing */
+    
 }
 
 .arrow a {
@@ -136,63 +137,40 @@ td:after{
 }
 
 
-.arrow-wrapper2 {
-    display: inline-block;
-    width: 100%;
-    text-align: right;
-    right: 0; /* Position it on the right side */
-    margin-top: -60px;
-}
-
-.arrow2 {
-    font-size: 50px; /* Adjust as needed */
-    display: inline-block;
-    transform: rotate(90deg); /* Rotate the arrow 90 degrees to point down */
-    transform-origin: center; /* Ensure the rotation is centered */
-    margin-top: -20px;
-
-}
-
 
 @media screen and (max-width: 962px) {
     /* Change the container's flex direction to column */
     #container {
         flex-direction: column;
+        display: flex;
     }
 
     /* Make the left section (poem) take full width */
     .left {
         width: 100vw;
         overflow-y: auto; /* Ensure scrolling works if needed */
-        margin-top: 5%;
+        order: 2; /* Position the poem below */
+        padding-top: 25rem;
     }
 
     /* Make the right section (table) take full width */
     .right {
         width: 100vw;
-        position: relative; /* Remove fixed positioning to stack vertically */
         height: auto; /* Allow height to adjust naturally */
-    }
-
-    .left {
-        order: 2; /* Position the poem below */
-    }
-
-    .right {
         order: 1; /* Position the table (puzzle) above */
-    }
+        padding-left: 50px;
 
+    }
     
     #table{
         font-family: 'Times New Roman', Times, serif;
-        font-size: 22px;
+        font-size: 17px;
         text-align: center;
-        margin-top: 11%;
-        margin-left: 0%;
+        margin-top: 7%;
     }
     
     td{
-        width: 50px;
+        width: 40px;
         height: 30px;
     }
 
@@ -214,16 +192,14 @@ td:after{
         outline: 1px solid black; /* Visible black outline on hover */
     }
     /* Adjust other elements as necessary */
-    .poem {
-        font-size: 30px; /* Reduce font size for better readability on smaller screens */
-        margin-top: 1rem; /* Add some spacing at the top */
-    }
+   
 
-    .instructions, .poem{
+     
+    .poem{
         font-family: 'Times New Roman', Times, serif;
-        font-size: 22px;
-        margin-left: 2px;
-        letter-spacing: -2px;
+        font-size: 15px;
+        margin-left: 1%;
+        letter-spacing: -1px;
         word-spacing: 1.5px;
     }
     
@@ -238,4 +214,51 @@ td:after{
         right: 10px;  /* Distance from the right edge */
     }
     
+
+
+    .arrow {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 0.px; /* Adjust size as needed */
+        transform-origin: center; /* Ensure rotation is centered */
+        white-space: nowrap; /* Prevents the arrow from breaking into multiple lines */
+        letter-spacing: normal; /* Resets any unwanted letter spacing */
+        position: absolute;
+        right: 0px;
+        transform: rotate(90deg) scale(0.6);
     }
+
+
+    #sectionred{
+        margin-top: 2rem;
+    }
+
+    #sectionorange{
+        padding-top: 25rem;
+    }
+
+
+    #sectionyellow{
+        padding-top: 25rem;
+    }
+
+
+    #sectiongreen{
+        padding-top: 25rem;
+    }
+
+    #sectionblue{
+        padding-top: 25rem;
+    }
+
+    #sectionpurple{
+        margin-top: 25rem;
+        margin-bottom: 7rem;
+
+    }
+
+    .instructions{
+        margin-top: 0px;
+    }
+
+    }
+
